@@ -6,6 +6,7 @@
 }
 
 .button {
+    position: relative;
     background-color: var(--ekho_blue);
     text-decoration: none;
     color: white;
@@ -13,6 +14,13 @@
     border-radius: 12px;
     font-size: 2em;
     z-index: 2;
+}
+
+.button:hover {
+    background-color: var(--ekho_orange);
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
 }
 
 .fullscreen-video-wrap {
@@ -92,7 +100,6 @@
 
 /* Small */
 @media only screen and (max-width: 768px) {
-
     .logo img {
         width: 100%;
     }
@@ -116,7 +123,6 @@
         float: none;
         margin-left: none;
     }
-
 }
 
 /* Extra Small */
