@@ -53,3 +53,8 @@ commit 10
 Added logo to landing page
 Changed video.css to landing.css and removed its stylesheet reference in landing.html
 Added buttons linking to landing pages
+
+commit 11
+---------
+Applied z-index to buttons on landing page
+Changed cursor and color of landing page buttons on hover
